<resources>
    <string name="app_name">App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Registation -->
    <string name="regis_name">"User Name"</string>
    <string name="regis_email">"Email"</string>
    <string name="regis_pass">"Password"</string>
    <string name="regis_comPass">"Confirm password"</string>
    <string name="title_activity_home"></string>
    <string name="settings_pwd_equal">password match</string>
    <string name="settings_pwd_not_equal">The password you entered do not match </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="relationship_prompt">Choose a country</string>
    <string-array name="relationship_arrays">
        <item>Single</item>
        <item>In a Relationship</item>
        <item>Married</item>
    </string-array>


    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Sri Lanka</item>
        <item>Japan</item>
        <item>USA</item>
        <item>UAE</item>
        <item>Kegalle</item>

    </string-array>

</resources>