<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <View
        android:id="@+id/logo"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="Sign Up"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.315" />

    <EditText
        android:id="@+id/username"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/regis_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/fontLightGray"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loading" />

    <EditText
        android:id="@+id/email"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/regis_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/fontLightGray"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:drawableLeft="@drawable/lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/regis_pass"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/fontLightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/com_password"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:background="@drawable/input_field"
        android:drawableLeft="@drawable/lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/regis_comPass"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/fontLightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.05" />


    <TextView
        android:id="@+id/error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/regular"
        android:gravity="left"
        android:text=""
        android:textColor="@color/red"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/com_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/action_sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/com_password"
        app:layout_constraintVertical_bias="0.225" />

    <View
        android:id="@+id/fb_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/fb_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <View
        android:id="@+id/insta_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/insta_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/fb_icon"
        app:layout_constraintVertical_bias="0.676" />


</androidx.constraintlayout.widget.ConstraintLayout>