<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <View
        android:id="@+id/logo"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="Log In"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <EditText
        android:id="@+id/username"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/regular"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/fontLightGray"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/eye_icon"
        android:drawablePadding="10dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/fontLightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/Forgotpassword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/regular"
        android:text="Forgot password?"
        android:textColor="@color/fontLightGray"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.625" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:background="@drawable/button"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgotpassword_text" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/regular"
        android:text="Don't have an Account? Sign Up"
        android:textColor="@color/fontLightGray"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_colorFilter="@color/white"
        app:lottie_rawRes="@raw/loading2_anim" />

    <View
        android:id="@+id/fb_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/fb_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text"
        app:layout_constraintVertical_bias="0.67" />

    <View
        android:id="@+id/insta_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/insta_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toEndOf="@+id/fb_icon"
        app:layout_constraintTop_toBottomOf="@+id/signup_text"
        app:layout_constraintVertical_bias="0.676" />


</androidx.constraintlayout.widget.ConstraintLayout>